handle multiple simultaneous SIGABRT signals

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.1.8
    • Affects Version/s: None
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • Sharding 9 (09/18/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, if you have two threads signal SIGABRT at the same time, the process will abort without showing any stack trace from either thread. This is due to using SA_RESETHAND when we install the signal handler for SIGABRT.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: