SERVER-20074 Log signal information for some thread when several threads raise a signal at once.